# taiwan-lottery

./: .gitignore  Cargo.toml  LICENSE  README.md  RESOURCE.md
c/: CMakeLists.txt  README.md
c/examples/: download.c  draw.c  query.c
c/src/: game_args.c  game_args.h
c/tests/: draw_test.c  numbers_test.c  query_test.c
doc/: DATA_CONSISTENCY_TESTS.md  GAME_MAPPING.md  LOCAL_GAME_DATE_RANGES.md  REMOTE_GAME_DATE_RANGES.md  RESOURCE.md
examples/: compare_local_remote.rs  download.rs  download_all_data.rs  draw.rs  get_draw.rs  query.rs
include/: taiwan_lottery_data.h
include/taiwan_lottery/: data.h  download.h  draw.h  numbers.h  query.h  taiwan_lottery.h
src/: download.rs  draw.rs  errors.rs  ffi.rs  lib.rs  numbers.rs  query.rs  rule.rs
src/download/: common.rs  gaze.rs  mod.rs  tlc.rs
src/ffi/: ffi_args.rs  ffi_convert.rs  ffi_free.rs  ffi_status.rs
src/query/: common.rs  local.rs  mod.rs  remote.rs
tests/: draw.rs  errors.rs  numbers.rs  parity.rs
