[package]
name = "taiwan-lottery"
version = "0.1.0"
edition = "2021"
description = "Taiwan lottery download, query, and random draw capabilities with Rust and C APIs"
authors = ["Leo Wu"]
license = "MIT"
repository = "https://github.com/leowu2017/taiwan-lottery"
homepage = "https://github.com/leowu2017/taiwan-lottery"
documentation = "https://docs.rs/taiwan-lottery"
readme = "README.md"
keywords = ["lottery", "taiwan", "download", "query", "draw"]
categories = ["api-bindings", "command-line-utilities"]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
csv = "1"
encoding_rs = "0.8"
percent-encoding = "2"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["std"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
